# game-editor

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  model_renderer.cpp  model_renderer.hpp  primitive.cpp  primitive.hpp  primitives.cpp  primitives.hpp  vertex.hpp
code/base/: vertex.hpp
code/core/: CMakeLists.txt  primitives.cpp  primitives.hpp  vertex.hpp
code/core/base/: CMakeLists.txt  primitives.cpp  primitives.hpp  vertex.hpp
code/core/vertex/: debug.hpp
code/debug/: geometry.hpp  vertex.hpp
code/renderers/: CMakeLists.txt  model.cpp  model.hpp
code/tools/: CMakeLists.txt  primitive.cpp  primitive.hpp  primitive_generator.cpp  primitive_generator.hpp  primitive_geometry.cpp  primitive_geometry.hpp  shader_converter.cpp  shader_converter.hpp
code/vertex/: debug.hpp
