#=======================================================================================================================
add_library(editor)
#=======================================================================================================================
add_subdirectory(core)
add_subdirectory(tools)
#=======================================================================================================================