#=======================================================================================================================
project(editor_core)
#=======================================================================================================================
add_library(${PROJECT_NAME})
#=======================================================================================================================
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
#=======================================================================================================================
target_link_libraries(${PROJECT_NAME} PRIVATE core_module math_module)
target_sources(${PROJECT_NAME}        PRIVATE primitives.cpp)
#=======================================================================================================================