#=======================================================================================================================
target_include_directories(editor PUBLIC ..)
     target_link_libraries(editor PUBLIC PRIVATE core)
#=======================================================================================================================