#=======================================================================================================================
target_link_libraries(${PROJECT_NAME} PRIVATE module_graphics)
target_sources(${PROJECT_NAME}        PRIVATE model.cpp)
#=======================================================================================================================